--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,24 +1,27 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top navbar-default" id="header">
   <div class="container">
-    <%= link_to "Sample App", root_path, id: "logo" %>
+    <%= link_to "Task App", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Top", root_path %></li>
+        <li><%= link_to "Top", root_path, class: "header-list" %></li>
         <% if logged_in? %>
-          <li><%= link_to "Users", '#' %></li>
+          <li><%= link_to "Users", '#', class: "header-list" %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
+            <a href="#" class="dropdown-toggle data-flip header-list" data-toggle="dropdown">
+              <%= current_user.name %><b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
+              <li class="dropdown-header">ユーザー</li>
               <li><%= link_to "Show", current_user %></li>
               <li><%= link_to "Settings", '#' %></li>
+              <li class="dropdown-header">タスク</li>
+              <li><%= link_to "タスク一覧", '#' %></li>
               <li class="divider"></li>
               <li><%= link_to "Log out", logout_path, method: :delete %></li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Log in", login_path %></li>
+          <li><%= link_to "Log in", login_path, class: "header-list" %></li>
         <% end %>
       </ul>
     </nav>
