--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Sign up') %>
-<h1>ユーザー登録</h1>
+<% provide(:title, current_user.name) %>
+<h1>ユーザー情報の更新</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -18,7 +18,7 @@
       <%= f.label :password_confirmation, class: "label-signup" %>
       <%= f.password_field :password_confirmation, class: "form-control" %>
 
-      <%= f.submit "新規作成", class: "btn btn-primary btn-block btn-signup" %>
+      <%= f.submit "更新", class: "btn btn-primary btn-block btn-signup" %>
     <% end %>
   </div>
 </div>
