--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -8,7 +8,7 @@
 }
 
 .task-name {
-  font-size : 18px;
+  font-size: 18px;
 }
 
 /* edit */
@@ -24,4 +24,14 @@
   th {
     text-align: center;
   }
+}
+
+/* new */
+
+.btn-task-new {
+  margin-top: 10px;
+}
+
+.label-content {
+  margin-top: 5px;
 }
