--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,6 +3,16 @@
 #table-user {
   margin-top: 20px;
   th {
-  text-align: center;
+    text-align: center;
   }
+}
+
+/* index */
+
+.btn-users-destroy {
+  float: right;
+}
+
+.label {
+  margin-left: 5px;
 }
