--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,13 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "トップ", root_path, class: "header-list" %></li>
+
+        <% if logged_in? && current_user.admin? %>
+          <li><%= link_to "ユーザー一覧", users_path, class: "header-list" %></li>
+        <% end %>
+        
         <% if logged_in? %>
-          <li><%= link_to "ユーザー一覧", '#', class: "header-list" %></li>
+          <li><%= link_to "タスク作成", new_user_task_path(current_user), class: "header-list" %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle data-flip header-list" data-toggle="dropdown">
               <%= current_user.name %><b class="caret"></b>
@@ -13,7 +18,7 @@
             <ul class="dropdown-menu">
               <li class="dropdown-header">ユーザー</li>
               <li><%= link_to "プロフィール", current_user %></li>
-              <li><%= link_to "設定", edit_user_path(@user) %></li>
+              <li><%= link_to "設定", edit_user_path(current_user) %></li>
               <li class="dropdown-header">タスク</li>
               <li><%= link_to "タスク一覧", user_tasks_path(current_user) %></li>
               <li class="divider"></li>
