--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,17 +2,19 @@
 <h1>タスク編集</h1>
 
 <div class="row">
-  <%= form_with(model: @task, url: user_task_path(@user, @task), local: true, method: :patch) do |f| %>
-    <%= render partial: 'shared/error_messages', locals: { obj: @task } %>
-   
-    <%= f.label :name, class: "label-form" %>
-    <%= f.text_field :name, class: "form-control" %>
-
-    <%= f.label :content, class: "label-form" %>
-    <%= f.text_area :content, rows: 5, class: "form-control" %>
+  <div class="col-md-8 col-md-offset-2">
+    <%= form_with(model: @task, url: user_task_path(@user, @task), local: true, method: :patch) do |f| %>
+      <%= render partial: 'shared/error_messages', locals: { obj: @task } %>
+     
+      <%= f.label :name, class: "label-form" %>
+      <%= f.text_field :name, class: "form-control" %>
   
-    <%= f.submit "更新", class: "btn btn-primary btn-md btn-edit-task" %>
-    <%= link_to "キャンセル", user_tasks_path(@user), class: "btn btn-default btn-md btn-edit-task" %>
-  <% end %>  
+      <%= f.label :content, class: "label-form label-content" %>
+      <%= f.text_area :content, rows: 5, class: "form-control" %>
+    
+      <%= f.submit "更新", class: "btn btn-primary btn-md btn-edit-task" %>
+      <%= link_to "キャンセル", user_task_path(@user, @task), class: "btn btn-default btn-md btn-edit-task" %>
+    <% end %>
+  </div>
 </div>
 
