--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -3,15 +3,17 @@
 <h1>タスク新規作成</h1>
 
 <div class="row">
-  <%= form_with(model: @task, url: user_tasks_path(@user), local: true) do |f| %>
-    <%= render partial: 'shared/error_messages', locals: { obj: @task } %>
+  <div class="col-md-8 col-md-offset-2">
+    <%= form_with(model: @task, url: user_tasks_path(@user), local: true) do |f| %>
+      <%= render partial: 'shared/error_messages', locals: { obj: @task } %>
+    
+      <%= f.label :name, class: "label-form" %>
+      <%= f.text_field :name, class: "form-control" %>
   
-    <%= f.label :name, class: "label-form" %>
-    <%= f.text_field :name, class: "form-control" %>
-
-    <%= f.label :content, class: "label-form" %>
-    <%= f.text_area :content, rows: 5, class: "form-control" %>
-  
-    <%= f.submit "新規作成", class: "btn btn-primary btn-lg" %>
-  <% end %>  
+      <%= f.label :content, class: "label-form label-content" %>
+      <%= f.text_area :content, rows: 5, class: "form-control" %>
+    
+      <%= f.submit "新規作成", class: "btn btn-primary btn-lg btn-task-new" %>
+    <% end %>
+  </div>
 </div>
