--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,7 +15,7 @@
       </tr>
       <tr>
         <th class="active">詳細</th>
-        <td><%= @task.content %></td>
+        <td><%= simple_format(content_url_to_link(h(@task.content)).html_safe) %></td>
       </tr>
       <tr>
         <th class="active">作成日</th>
@@ -32,4 +32,3 @@
     data: { confirm: "「#{@task.name}」を削除します。よろしいですか？" } %>
   </div>
 </div>
-  
